--- a/src/languages/fr.po
+++ b/src/languages/fr.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: VERSION\n"
-"POT-Creation-Date: 2016-04-27 14:35+0000\n"
-"PO-Revision-Date: 2016-04-27 14:35+0000\n"
+"POT-Creation-Date: 2016-04-28 08:27+0000\n"
+"PO-Revision-Date: 2016-04-28 08:27+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE TEAM <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -11,10 +11,29 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+msgid "Budgets"
+msgstr "Budgets"
+
+msgid "Forms"
+msgstr "Formulaires"
+
 #: components/mpd-form/mpd-form.html:13
 #: components/mpd-form/mpd-form.html:64
 msgid "Actions"
 msgstr "Actions"
+
+msgid "Active"
+msgstr "Active"
+
+msgid "Add Line Item"
+msgstr "Ajouter une ligne"
+
+msgid "Add Section"
+msgstr "Ajouter une section"
+
+#: components/mpd-budget/section.html:43
+msgid "All values in local currency ({{form.currency_code || 'USD'}})."
+msgstr "Tous les chiffres en devise locale ({{form.currency_code || 'EUR'}})."
 
 msgid "Application Loading &hellip;"
 msgstr "Chargement &hellip;"
