set default to en

--- a/src/languages/en-US.json
+++ b/src/languages/en-US.json
@@ -1,1 +1,1 @@
-{"en_US":{"Application Loading …":"Loading the App &hellip;"}}
+{"en_US":{"Application Loading …":"Loading the App &hellip;","Create a Budget":"Make a Budget"}}
